...
    private var car: CarViewModel
    private var carTag: Int
    private var workTag: Int
    
    private var date = String()
    
    var chequeImage = UIImageView()
    
    private let changeButton = UIButton()
    
    private var dateLabel = UILabel()
    
    private let dateButton = UILabel()
    
    
...
