import Foundation
import SwiftUI
import Combine

struct OnboardingView: View {
    var images: [String] = ["first", "second", "third", "fourth", "last"]
    var goToAddScreen: () -> Void
    
    @State private var currentPage: Int = 0
    @ObservedObject var countTimer: CountTimer = CountTimer(items: 5, interval: 8.0)
    @Environment(\.presentationMode) var presentationMode

...
