...
    let scrollView = UIScrollView()
        
    init() {
        super.init(frame: .zero)
        self.backgroundColor = UIColor(red: 31 / 255.0, green: 37 / 255.0, blue: 41 / 255.0, alpha: 1.0)
        setupScrollView()
        setupHeaderLabel("Новый автомобиль")
        setupContentField()
        
        setupButtons()
        setupCheckButton()
        
    }
...
