...
    
    
    var body: some View {
        
        Map(position: $cameraPosition, selection: $mapSelection) {
            
            Annotation("My Location", coordinate: .userLocation) {
                
                ZStack{
                    Circle()
                        .frame(width: 32, height: 32)
                        .foregroundStyle(.blue.opacity(0.25))
                    Circle()
...
